--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 
 *.html
+log/*.log
+logs
+target/*
+target
+screenshot
+screenshot/*
+test-output
+.project
+.idea
+.classpath
+*.iml
+libraries
+libraries/*
+MyWebApp.iml
+config/config.properties
+config/data.properties
