--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
             <version>3.14.0</version>
             <scope>test</scope>
         </dependency>
+        
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>3.14.0</version>
+		</dependency> 
+ 
+
  
         <dependency>
             <groupId>org.testng</groupId>
